[package]
name = "rusty-clawer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
env_logger = "0.11.2"
html5tokenizer = "0.5.2"
log = "0.4.20"
reqwest = { version = "0.11.24" }
scraper = "0.19.0"
tokio = { version = "1", features = ["full"] }
